--- a/create_fundus_features.ipynb
+++ b/create_fundus_features.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/envs/nnUNet/lib/python3.10/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "from tqdm import tqdm\n",
@@ -21,12 +30,16 @@
     "import ssl\n",
     "import gc  \n",
     "\n",
-    "repo_dir = '/mnt/storage1/Haoran/projects/retina/retina-dinov2'"
+    "repo_dir = '/mnt/storage1/Haoran/projects/retina/retina-dinov2'\n",
+    "model_name = 'vits14'\n",
+    "pretrained_model = True\n",
+    "train_type = 'pretrained'\n",
+    "feature_save_name = f'{model_name}_{train_type}'\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -89,9 +102,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/mnt/storage1/Haoran/projects/retina/retina-dinov2/dinov2/layers/swiglu_ffn.py:51: UserWarning: xFormers is not available (SwiGLU)\n",
+      "  warnings.warn(\"xFormers is not available (SwiGLU)\")\n",
+      "/mnt/storage1/Haoran/projects/retina/retina-dinov2/dinov2/layers/attention.py:33: UserWarning: xFormers is not available (Attention)\n",
+      "  warnings.warn(\"xFormers is not available (Attention)\")\n",
+      "/mnt/storage1/Haoran/projects/retina/retina-dinov2/dinov2/layers/block.py:40: UserWarning: xFormers is not available (Block)\n",
+      "  warnings.warn(\"xFormers is not available (Block)\")\n"
+     ]
+    }
+   ],
    "source": [
     "from dinov2.models.vision_transformer import vit_base \n",
     "\n",
@@ -105,9 +131,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using cache found in /home/hchen19/.cache/torch/hub/facebookresearch_dinov2_main\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using device: cuda\n"
+     ]
+    }
+   ],
    "source": [
     "def modify_keys(pretrained_weights):\n",
     "    new_weights = {}\n",
@@ -123,295 +164,27 @@
     "\n",
     "    return new_weights\n",
     "\n",
-    "checkpoint_path = '/mnt/storage1/Haoran/projects/retina/retina-dinov2/model/vitb16/eval/training_112499/teacher_checkpoint.pth'\n",
-    "pretrained_weights = torch.load(checkpoint_path)['teacher']\n",
-    "pretrained_weights = modify_keys(pretrained_weights)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 151,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Using device: cuda\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "DinoVisionTransformer(\n",
-       "  (patch_embed): PatchEmbed(\n",
-       "    (proj): Conv2d(3, 768, kernel_size=(16, 16), stride=(16, 16))\n",
-       "    (norm): Identity()\n",
-       "  )\n",
-       "  (blocks): ModuleList(\n",
-       "    (0): NestedTensorBlock(\n",
-       "      (norm1): LayerNorm((768,), eps=1e-06, elementwise_affine=True)\n",
-       "      (attn): MemEffAttention(\n",
-       "        (qkv): Linear(in_features=768, out_features=2304, bias=True)\n",
-       "        (attn_drop): Dropout(p=0.0, inplace=False)\n",
-       "        (proj): Linear(in_features=768, out_features=768, bias=True)\n",
-       "        (proj_drop): Dropout(p=0.0, inplace=False)\n",
-       "      )\n",
-       "      (ls1): LayerScale()\n",
-       "      (drop_path1): Identity()\n",
-       "      (norm2): LayerNorm((768,), eps=1e-06, elementwise_affine=True)\n",
-       "      (mlp): Mlp(\n",
-       "        (fc1): Linear(in_features=768, out_features=3072, bias=True)\n",
-       "        (act): GELU(approximate='none')\n",
-       "        (fc2): Linear(in_features=3072, out_features=768, bias=True)\n",
-       "        (drop): Dropout(p=0.0, inplace=False)\n",
-       "      )\n",
-       "      (ls2): LayerScale()\n",
-       "      (drop_path2): Identity()\n",
-       "    )\n",
-       "    (1): NestedTensorBlock(\n",
-       "      (norm1): LayerNorm((768,), eps=1e-06, elementwise_affine=True)\n",
-       "      (attn): MemEffAttention(\n",
-       "        (qkv): Linear(in_features=768, out_features=2304, bias=True)\n",
-       "        (attn_drop): Dropout(p=0.0, inplace=False)\n",
-       "        (proj): Linear(in_features=768, out_features=768, bias=True)\n",
-       "        (proj_drop): Dropout(p=0.0, inplace=False)\n",
-       "      )\n",
-       "      (ls1): LayerScale()\n",
-       "      (drop_path1): Identity()\n",
-       "      (norm2): LayerNorm((768,), eps=1e-06, elementwise_affine=True)\n",
-       "      (mlp): Mlp(\n",
-       "        (fc1): Linear(in_features=768, out_features=3072, bias=True)\n",
-       "        (act): GELU(approximate='none')\n",
-       "        (fc2): Linear(in_features=3072, out_features=768, bias=True)\n",
-       "        (drop): Dropout(p=0.0, inplace=False)\n",
-       "      )\n",
-       "      (ls2): LayerScale()\n",
-       "      (drop_path2): Identity()\n",
-       "    )\n",
-       "    (2): NestedTensorBlock(\n",
-       "      (norm1): LayerNorm((768,), eps=1e-06, elementwise_affine=True)\n",
-       "      (attn): MemEffAttention(\n",
-       "        (qkv): Linear(in_features=768, out_features=2304, bias=True)\n",
-       "        (attn_drop): Dropout(p=0.0, inplace=False)\n",
-       "        (proj): Linear(in_features=768, out_features=768, bias=True)\n",
-       "        (proj_drop): Dropout(p=0.0, inplace=False)\n",
-       "      )\n",
-       "      (ls1): LayerScale()\n",
-       "      (drop_path1): Identity()\n",
-       "      (norm2): LayerNorm((768,), eps=1e-06, elementwise_affine=True)\n",
-       "      (mlp): Mlp(\n",
-       "        (fc1): Linear(in_features=768, out_features=3072, bias=True)\n",
-       "        (act): GELU(approximate='none')\n",
-       "        (fc2): Linear(in_features=3072, out_features=768, bias=True)\n",
-       "        (drop): Dropout(p=0.0, inplace=False)\n",
-       "      )\n",
-       "      (ls2): LayerScale()\n",
-       "      (drop_path2): Identity()\n",
-       "    )\n",
-       "    (3): NestedTensorBlock(\n",
-       "      (norm1): LayerNorm((768,), eps=1e-06, elementwise_affine=True)\n",
-       "      (attn): MemEffAttention(\n",
-       "        (qkv): Linear(in_features=768, out_features=2304, bias=True)\n",
-       "        (attn_drop): Dropout(p=0.0, inplace=False)\n",
-       "        (proj): Linear(in_features=768, out_features=768, bias=True)\n",
-       "        (proj_drop): Dropout(p=0.0, inplace=False)\n",
-       "      )\n",
-       "      (ls1): LayerScale()\n",
-       "      (drop_path1): Identity()\n",
-       "      (norm2): LayerNorm((768,), eps=1e-06, elementwise_affine=True)\n",
-       "      (mlp): Mlp(\n",
-       "        (fc1): Linear(in_features=768, out_features=3072, bias=True)\n",
-       "        (act): GELU(approximate='none')\n",
-       "        (fc2): Linear(in_features=3072, out_features=768, bias=True)\n",
-       "        (drop): Dropout(p=0.0, inplace=False)\n",
-       "      )\n",
-       "      (ls2): LayerScale()\n",
-       "      (drop_path2): Identity()\n",
-       "    )\n",
-       "    (4): NestedTensorBlock(\n",
-       "      (norm1): LayerNorm((768,), eps=1e-06, elementwise_affine=True)\n",
-       "      (attn): MemEffAttention(\n",
-       "        (qkv): Linear(in_features=768, out_features=2304, bias=True)\n",
-       "        (attn_drop): Dropout(p=0.0, inplace=False)\n",
-       "        (proj): Linear(in_features=768, out_features=768, bias=True)\n",
-       "        (proj_drop): Dropout(p=0.0, inplace=False)\n",
-       "      )\n",
-       "      (ls1): LayerScale()\n",
-       "      (drop_path1): Identity()\n",
-       "      (norm2): LayerNorm((768,), eps=1e-06, elementwise_affine=True)\n",
-       "      (mlp): Mlp(\n",
-       "        (fc1): Linear(in_features=768, out_features=3072, bias=True)\n",
-       "        (act): GELU(approximate='none')\n",
-       "        (fc2): Linear(in_features=3072, out_features=768, bias=True)\n",
-       "        (drop): Dropout(p=0.0, inplace=False)\n",
-       "      )\n",
-       "      (ls2): LayerScale()\n",
-       "      (drop_path2): Identity()\n",
-       "    )\n",
-       "    (5): NestedTensorBlock(\n",
-       "      (norm1): LayerNorm((768,), eps=1e-06, elementwise_affine=True)\n",
-       "      (attn): MemEffAttention(\n",
-       "        (qkv): Linear(in_features=768, out_features=2304, bias=True)\n",
-       "        (attn_drop): Dropout(p=0.0, inplace=False)\n",
-       "        (proj): Linear(in_features=768, out_features=768, bias=True)\n",
-       "        (proj_drop): Dropout(p=0.0, inplace=False)\n",
-       "      )\n",
-       "      (ls1): LayerScale()\n",
-       "      (drop_path1): Identity()\n",
-       "      (norm2): LayerNorm((768,), eps=1e-06, elementwise_affine=True)\n",
-       "      (mlp): Mlp(\n",
-       "        (fc1): Linear(in_features=768, out_features=3072, bias=True)\n",
-       "        (act): GELU(approximate='none')\n",
-       "        (fc2): Linear(in_features=3072, out_features=768, bias=True)\n",
-       "        (drop): Dropout(p=0.0, inplace=False)\n",
-       "      )\n",
-       "      (ls2): LayerScale()\n",
-       "      (drop_path2): Identity()\n",
-       "    )\n",
-       "    (6): NestedTensorBlock(\n",
-       "      (norm1): LayerNorm((768,), eps=1e-06, elementwise_affine=True)\n",
-       "      (attn): MemEffAttention(\n",
-       "        (qkv): Linear(in_features=768, out_features=2304, bias=True)\n",
-       "        (attn_drop): Dropout(p=0.0, inplace=False)\n",
-       "        (proj): Linear(in_features=768, out_features=768, bias=True)\n",
-       "        (proj_drop): Dropout(p=0.0, inplace=False)\n",
-       "      )\n",
-       "      (ls1): LayerScale()\n",
-       "      (drop_path1): Identity()\n",
-       "      (norm2): LayerNorm((768,), eps=1e-06, elementwise_affine=True)\n",
-       "      (mlp): Mlp(\n",
-       "        (fc1): Linear(in_features=768, out_features=3072, bias=True)\n",
-       "        (act): GELU(approximate='none')\n",
-       "        (fc2): Linear(in_features=3072, out_features=768, bias=True)\n",
-       "        (drop): Dropout(p=0.0, inplace=False)\n",
-       "      )\n",
-       "      (ls2): LayerScale()\n",
-       "      (drop_path2): Identity()\n",
-       "    )\n",
-       "    (7): NestedTensorBlock(\n",
-       "      (norm1): LayerNorm((768,), eps=1e-06, elementwise_affine=True)\n",
-       "      (attn): MemEffAttention(\n",
-       "        (qkv): Linear(in_features=768, out_features=2304, bias=True)\n",
-       "        (attn_drop): Dropout(p=0.0, inplace=False)\n",
-       "        (proj): Linear(in_features=768, out_features=768, bias=True)\n",
-       "        (proj_drop): Dropout(p=0.0, inplace=False)\n",
-       "      )\n",
-       "      (ls1): LayerScale()\n",
-       "      (drop_path1): Identity()\n",
-       "      (norm2): LayerNorm((768,), eps=1e-06, elementwise_affine=True)\n",
-       "      (mlp): Mlp(\n",
-       "        (fc1): Linear(in_features=768, out_features=3072, bias=True)\n",
-       "        (act): GELU(approximate='none')\n",
-       "        (fc2): Linear(in_features=3072, out_features=768, bias=True)\n",
-       "        (drop): Dropout(p=0.0, inplace=False)\n",
-       "      )\n",
-       "      (ls2): LayerScale()\n",
-       "      (drop_path2): Identity()\n",
-       "    )\n",
-       "    (8): NestedTensorBlock(\n",
-       "      (norm1): LayerNorm((768,), eps=1e-06, elementwise_affine=True)\n",
-       "      (attn): MemEffAttention(\n",
-       "        (qkv): Linear(in_features=768, out_features=2304, bias=True)\n",
-       "        (attn_drop): Dropout(p=0.0, inplace=False)\n",
-       "        (proj): Linear(in_features=768, out_features=768, bias=True)\n",
-       "        (proj_drop): Dropout(p=0.0, inplace=False)\n",
-       "      )\n",
-       "      (ls1): LayerScale()\n",
-       "      (drop_path1): Identity()\n",
-       "      (norm2): LayerNorm((768,), eps=1e-06, elementwise_affine=True)\n",
-       "      (mlp): Mlp(\n",
-       "        (fc1): Linear(in_features=768, out_features=3072, bias=True)\n",
-       "        (act): GELU(approximate='none')\n",
-       "        (fc2): Linear(in_features=3072, out_features=768, bias=True)\n",
-       "        (drop): Dropout(p=0.0, inplace=False)\n",
-       "      )\n",
-       "      (ls2): LayerScale()\n",
-       "      (drop_path2): Identity()\n",
-       "    )\n",
-       "    (9): NestedTensorBlock(\n",
-       "      (norm1): LayerNorm((768,), eps=1e-06, elementwise_affine=True)\n",
-       "      (attn): MemEffAttention(\n",
-       "        (qkv): Linear(in_features=768, out_features=2304, bias=True)\n",
-       "        (attn_drop): Dropout(p=0.0, inplace=False)\n",
-       "        (proj): Linear(in_features=768, out_features=768, bias=True)\n",
-       "        (proj_drop): Dropout(p=0.0, inplace=False)\n",
-       "      )\n",
-       "      (ls1): LayerScale()\n",
-       "      (drop_path1): Identity()\n",
-       "      (norm2): LayerNorm((768,), eps=1e-06, elementwise_affine=True)\n",
-       "      (mlp): Mlp(\n",
-       "        (fc1): Linear(in_features=768, out_features=3072, bias=True)\n",
-       "        (act): GELU(approximate='none')\n",
-       "        (fc2): Linear(in_features=3072, out_features=768, bias=True)\n",
-       "        (drop): Dropout(p=0.0, inplace=False)\n",
-       "      )\n",
-       "      (ls2): LayerScale()\n",
-       "      (drop_path2): Identity()\n",
-       "    )\n",
-       "    (10): NestedTensorBlock(\n",
-       "      (norm1): LayerNorm((768,), eps=1e-06, elementwise_affine=True)\n",
-       "      (attn): MemEffAttention(\n",
-       "        (qkv): Linear(in_features=768, out_features=2304, bias=True)\n",
-       "        (attn_drop): Dropout(p=0.0, inplace=False)\n",
-       "        (proj): Linear(in_features=768, out_features=768, bias=True)\n",
-       "        (proj_drop): Dropout(p=0.0, inplace=False)\n",
-       "      )\n",
-       "      (ls1): LayerScale()\n",
-       "      (drop_path1): Identity()\n",
-       "      (norm2): LayerNorm((768,), eps=1e-06, elementwise_affine=True)\n",
-       "      (mlp): Mlp(\n",
-       "        (fc1): Linear(in_features=768, out_features=3072, bias=True)\n",
-       "        (act): GELU(approximate='none')\n",
-       "        (fc2): Linear(in_features=3072, out_features=768, bias=True)\n",
-       "        (drop): Dropout(p=0.0, inplace=False)\n",
-       "      )\n",
-       "      (ls2): LayerScale()\n",
-       "      (drop_path2): Identity()\n",
-       "    )\n",
-       "    (11): NestedTensorBlock(\n",
-       "      (norm1): LayerNorm((768,), eps=1e-06, elementwise_affine=True)\n",
-       "      (attn): MemEffAttention(\n",
-       "        (qkv): Linear(in_features=768, out_features=2304, bias=True)\n",
-       "        (attn_drop): Dropout(p=0.0, inplace=False)\n",
-       "        (proj): Linear(in_features=768, out_features=768, bias=True)\n",
-       "        (proj_drop): Dropout(p=0.0, inplace=False)\n",
-       "      )\n",
-       "      (ls1): LayerScale()\n",
-       "      (drop_path1): Identity()\n",
-       "      (norm2): LayerNorm((768,), eps=1e-06, elementwise_affine=True)\n",
-       "      (mlp): Mlp(\n",
-       "        (fc1): Linear(in_features=768, out_features=3072, bias=True)\n",
-       "        (act): GELU(approximate='none')\n",
-       "        (fc2): Linear(in_features=3072, out_features=768, bias=True)\n",
-       "        (drop): Dropout(p=0.0, inplace=False)\n",
-       "      )\n",
-       "      (ls2): LayerScale()\n",
-       "      (drop_path2): Identity()\n",
-       "    )\n",
-       "  )\n",
-       "  (norm): LayerNorm((768,), eps=1e-06, elementwise_affine=True)\n",
-       "  (head): Identity()\n",
-       ")"
-      ]
-     },
-     "execution_count": 151,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ssl._create_default_https_context = ssl._create_unverified_context\n",
+    "if pretrained_model == False:\n",
+    "    checkpoint_path = f'/mnt/storage1/Haoran/projects/retina/retina-dinov2/model/{model_name}/eval/training_112499/teacher_checkpoint.pth'\n",
+    "    pretrained_weights = torch.load(checkpoint_path)['teacher']\n",
+    "    pretrained_weights = modify_keys(pretrained_weights)\n",
+    "    ssl._create_default_https_context = ssl._create_unverified_context\n",
     "\n",
-    "dinov2_model.load_state_dict(pretrained_weights)\n",
-    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
-    "print(\"Using device:\", device)\n",
-    "dinov2_model.to(device)  # Move your model to the GPU"
+    "    dinov2_model.load_state_dict(pretrained_weights)\n",
+    "    device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "    print(\"Using device:\", device)\n",
+    "    dinov2_model.to(device)  # Move your model to the GPU\n",
+    "else:\n",
+    "    ssl._create_default_https_context = ssl._create_unverified_context\n",
+    "    dinov2_model = torch.hub.load('facebookresearch/dinov2', f'dinov2_{model_name}')\n",
+    "    device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "    print(\"Using device:\", device)\n",
+    "    dinov2_model.to(device)  #"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -427,14 +200,12 @@
    ],
    "source": [
     "dir_path = \"/mnt/gvd0n1/Abbas/Projects/Dyer/Danielle/Fundus_batch6_April29/crop/\"\n",
-    "dataset = CustomImageDataset(dir_path)\n",
-    "file_names = dataset.get_file_names()\n",
-    "print(file_names)"
+    "dataset = CustomImageDataset(dir_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 6,
    "metadata": {
     "tags": []
    },
@@ -459,7 +230,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 12%|█▏        | 40/333 [04:03<29:50,  6.11s/it]"
+      " 83%|████████▎ | 277/333 [15:33<04:18,  4.61s/it]"
      ]
     }
    ],
@@ -509,16 +280,9 @@
     "import numpy as np\n",
     "final_img_features_array = np.array(final_img_features)\n",
     "# Save the array\n",
-    "np.save(f'{repo_dir}/feature/final_img_features_array.npy', final_img_features_array)\n",
+    "np.save(f'{repo_dir}/feature/{feature_save_name}.npy', final_img_features_array)\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
