--- a/create_fundus_features.ipynb
+++ b/create_fundus_features.ipynb
@@ -31,9 +31,12 @@
     "import gc  \n",
     "\n",
     "repo_dir = '/mnt/storage1/Haoran/projects/retina/retina-dinov2'\n",
-    "model_name = 'vits14'\n",
-    "pretrained_model = True\n",
-    "train_type = 'pretrained'\n",
+    "model_name = 'vitl16'\n",
+    "pretrained_model = False\n",
+    "if pretrained_model:\n",
+    "    train_type = 'pretrained'\n",
+    "else:\n",
+    "    train_type = 'scratch'\n",
     "feature_save_name = f'{model_name}_{train_type}'\n"
    ]
   },
@@ -119,14 +122,22 @@
     }
    ],
    "source": [
-    "from dinov2.models.vision_transformer import vit_base \n",
+    "from dinov2.models.vision_transformer import vit_base, vit_large\n",
     "\n",
-    "dinov2_model = vit_base(\n",
-    "    patch_size=16,\n",
-    "    img_size=224,\n",
-    "    init_values=1.0,\n",
-    "    block_chunks=0\n",
-    " )"
+    "if model_name == 'vitb16':\n",
+    "    model = vit_base(\n",
+    "        patch_size=16,\n",
+    "        img_size=224,\n",
+    "        init_values=1.0,\n",
+    "        block_chunks=0\n",
+    "    )\n",
+    "elif model_name == 'vitl16':\n",
+    "    model = vit_large(\n",
+    "        patch_size=16,\n",
+    "        img_size=224,\n",
+    "        init_values=1.0,\n",
+    "        block_chunks=0\n",
+    "    )"
    ]
   },
   {
@@ -230,7 +241,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 83%|████████▎ | 277/333 [15:33<04:18,  4.61s/it]"
+      "100%|██████████| 333/333 [19:07<00:00,  3.44s/it]\n"
      ]
     }
    ],
@@ -273,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
