--- a/create_fundus_features.ipynb
+++ b/create_fundus_features.ipynb
@@ -210,14 +210,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/333 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 333/333 [19:07<00:00,  3.44s/it]\n"
+      "  0%|          | 0/333 [00:00<?, ?it/s]100%|██████████| 333/333 [19:07<00:00,  3.44s/it]\n"
      ]
     }
    ],
@@ -274,9 +267,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "nnUNet Kernel",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "nnunet"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -288,7 +281,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
